crates/buff-lang-codegen-rust/tests/snapshots/web_codegen__base64_codegen_decode_snapshot.snap
---
source: crates/buff-lang-codegen-rust/tests/web_codegen.rs
assertion_line: 685
expression: src
---
fn f() {
    base64::Engine::decode(&base64::engine::general_purpose::STANDARD, "aGVsbG8=")
        .unwrap_or_default();
}
