crates/buff-lang-codegen-rust/tests/snapshots/web_codegen__hex_codegen_decode_snapshot.snap
---
source: crates/buff-lang-codegen-rust/tests/web_codegen.rs
assertion_line: 733
expression: src
---
fn f() {
    hex::decode("deadbeef".to_string()).unwrap_or_default();
}
