crates/buff-lang-codegen-rust/tests/snapshots/web_codegen__hex_codegen_encode_snapshot.snap
---
source: crates/buff-lang-codegen-rust/tests/web_codegen.rs
assertion_line: 691
expression: src
---
fn f() {
    hex::encode(vec![72, 105]);
}
