crates/buff-lang-codegen-rust/tests/snapshots/web_codegen__url_codegen_host_snapshot.snap
---
source: crates/buff-lang-codegen-rust/tests/web_codegen.rs
assertion_line: 809
expression: src
---
fn f() {
    let u: url::Url = url::Url::parse("https://a.com/b".to_string())
        .unwrap_or_else(|_| url::Url::parse("about:blank").unwrap());
    u.host_str().unwrap_or_default().to_string();
}
