crates/buff-lang-codegen-rust/tests/snapshots/web_codegen__url_codegen_path_snapshot.snap
---
source: crates/buff-lang-codegen-rust/tests/web_codegen.rs
assertion_line: 768
expression: src
---
fn f() {
    let u: url::Url = url::Url::parse("https://a.com/b")
        .unwrap_or_else(|_| url::Url::parse("about:blank").unwrap());
    u.path().to_string();
}
