crates/buff-lang-codegen-rust/tests/snapshots/web_codegen__url_codegen_query_snapshot.snap
---
source: crates/buff-lang-codegen-rust/tests/web_codegen.rs
assertion_line: 833
expression: src
---
fn f() {
    let u: url::Url = url::Url::parse("https://a.com/b?q=1".to_string())
        .unwrap_or_else(|_| url::Url::parse("about:blank").unwrap());
    {
        let __buff_key = ("q".to_string()).to_string();
        u.query_pairs().find(|(k, _)| *k == __buff_key).map(|(_, v)| v.into_owned())
    };
}
