crates/buff-lang-codegen-rust/tests/snapshots/web_codegen__url_codegen_scheme_snapshot.snap
---
source: crates/buff-lang-codegen-rust/tests/web_codegen.rs
assertion_line: 797
expression: src
---
fn f() {
    let u: url::Url = url::Url::parse("https://a.com/b".to_string())
        .unwrap_or_else(|_| url::Url::parse("about:blank").unwrap());
    u.scheme().to_string();
}
