crates/buff-lang-codegen-rust/tests/snapshots/web_codegen__urlencode_codegen_decode_snapshot.snap
---
source: crates/buff-lang-codegen-rust/tests/web_codegen.rs
assertion_line: 751
expression: src
---
fn f() {
    percent_encoding::percent_decode_str("foo%20bar".to_string())
        .decode_utf8_lossy()
        .into_owned();
}
