crates/buff-lang-codegen-rust/tests/snapshots/web_codegen__urlencode_codegen_encode_snapshot.snap
---
source: crates/buff-lang-codegen-rust/tests/web_codegen.rs
assertion_line: 704
expression: src
---
fn f() {
    percent_encoding::utf8_percent_encode("foo bar?", percent_encoding::NON_ALPHANUMERIC)
        .to_string();
}
