crates/buff-lang-codegen-rust/tests/snapshots/web_codegen__uuid_codegen_parse_snapshot.snap
---
source: crates/buff-lang-codegen-rust/tests/web_codegen.rs
assertion_line: 776
expression: src
---
fn f() {
    uuid::Uuid::parse_str("550e8400-e29b-41d4-a716-446655440000".to_string()).is_ok();
}
